<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="40dp"
    tools:context=".HomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/location"/>
            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/location"/>
        </LinearLayout>
        <Button
            android:id="@+id/changeLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/use_a_different_location"/>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>
    <Button
        android:id="@+id/lostbutton"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/lost"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>
    <Button
        android:id="@+id/foundbutton"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/found"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>
    <Button
        android:id="@+id/mylostbutton"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/my_lost_items"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>
</LinearLayout>