<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="60dp"
    android:layout_marginRight="40dp"
    tools:context=".ShowAnswer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="32sp"
        android:text="@string/username"/>
    <EditText
        android:id="@+id/UsernameInput"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textSize="32sp"
            android:text="@string/phone_number"/>

        <ImageButton
            android:id="@+id/phonebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_info_black_24dp" />
    </LinearLayout>
    <EditText
        android:id="@+id/PhoneNumberInput"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="phone"
        android:maxLength="10"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="32sp"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/PasswordInput"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="32sp"
        android:text="@string/confirm_password"/>
    <EditText
        android:id="@+id/ConfirmPasswordInput"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">
        <Button
            android:id="@+id/signupbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"/>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>
</LinearLayout>